Reindent of test class